fixed navigation alignment and mobile responsiveness

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,9 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P|Comfortaa);
+$pressStart: 'Press Start 2P', cursive;
+$comfortaa: 'Comfortaa', cursive;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
